almost complete
yaml file is complete but the basic crud operations need to change
